Update Sentiment Analysis and LSTM Script-1.ipynb

--- a/Sentiment Analysis and LSTM Script-1.ipynb
+++ b/Sentiment Analysis and LSTM Script-1.ipynb
@@ -10,6 +10,9 @@
     "### Main Notebook with LSTM Model."
    ]
   },
+ "source": [
+    "#### Student Name: Kelvin Idogun; Student Number : 202250185"
+   ]
   {
    "cell_type": "markdown",
    "id": "99ffbec5-6f85-4987-8234-76df4fa1744e",
