Update Sentiment Analysis and LSTM Script-1.ipynb

--- a/Sentiment Analysis and LSTM Script-1.ipynb
+++ b/Sentiment Analysis and LSTM Script-1.ipynb
@@ -7,7 +7,7 @@
     "id": "7e427ef8-d1c4-4dd0-83c4-2717099c65b3"
    },
    "source": [
-    "### Main Notebook with LSTM Model."
+    "###  LSTM Model."
    ]
   },
   {
